# swpp-2025-project-team-02

./: .coveragerc  .env.backup  .env.example  .gitignore  .gitmodules  AGENTS.md  PROPOSAL.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md  test.md
.github/workflows/: python-tests.yml  railway-deploy.yml
docs/wireframes/: index.html
fortuna_ai/: FIXES.md  README.md  TRAINING_GUIDE.md  check_dataset.py  collect_balanced_dataset.py  collect_fire_images.py  convert_balanced_to_smolvlm.py  convert_balanced_to_smolvlm_descriptive.py  convert_to_gguf.sh  debug_dataset.py  fire_images_found.txt  merge_fire_to_balanced.py  merge_lora.py  prepare_jsonl_dataset.py  quickstart.sh  rebalance_dataset.py  requirements.txt  test_dataset_item.py  train_smolvlm.py  validate.py  validate_smolvlm.py
fortuna_ai/configs/: colab.yaml  l40s.yaml  mac.yaml
fortuna_ai/dataset_balanced/: train_final.jsonl  train_rebalanced.jsonl
fortuna_ai/dataset_balanced_smolvlm/: train.jsonl  val.jsonl
fortuna_ai/dataset_balanced_smolvlm_descriptive/: train.jsonl  val.jsonl
fortuna_android/: .gitignore  BUILD.md  GPU_ACCELERATION.md  INSTRUMENTED_TESTS_README.md  SETUP.md  TTS_SECURITY.md  VLM.md  VLM_CAMERA_PLAN.md  VLM_TEST_GUIDE.md  build.gradle.kts  settings.gradle.kts  testkey.jks
fortuna_android/app/: build.gradle.kts  google-services.json
fortuna_android/app/src/main/: AndroidManifest.xml
fortuna_android/app/src/main/assets/: class.txt  opencl_vendors.txt
fortuna_android/app/src/main/assets/models/: water.glb
fortuna_android/app/src/main/assets/shaders/: object.frag  object.vert
fortuna_android/app/src/main/assets/spheres/: blue.mtl  green.mtl  red.mtl  white.mtl  yellow.mtl
fortuna_android/app/src/main/jniLibs/arm64-v8a/: .gitkeep
fortuna_android/app/src/main/res/anim/: fade_animation.xml  rotate_clockwise.xml  rotate_infinite.xml  shimmer_pulse.xml
fortuna_android/app/src/main/res/color/: ar_scan_button_text_color.xml  button_selectable_text_color.xml  button_text_color.xml  nav_icon_purple.xml  nav_icon_white.xml
fortuna_android/app/src/main/res/drawable/: ar_back_button_background.xml  ar_collecting_guide_background.xml  ar_element_banner_background.xml  ar_reset_button_background.xml  ar_scan_button_background.xml  ar_scan_button_disabled.xml  ar_scan_button_selector.xml  bg_circle_gradient_purple.xml  bottom_navigation_background.xml  button_black_white_border.xml  button_default.xml  button_gradient_purple.xml  button_gradient_purple_ripple.xml  button_selectable_background.xml  button_selected.xml  button_selector.xml  button_shimmer_border.xml  camera_switch_background.xml  card_background.xml  circle_blue.xml  circle_brown.xml  circle_green.xml  circle_orange.xml  circle_red.xml  circular_arrow.xml  circular_button_background.xml  dot_empty.xml  dot_unselected.xml  edit_text_dark_background.xml  focus_circle.xml  ic_3d_rotation.xml  ic_atom.xml  ic_calendar.xml  ic_camera.xml  ic_camera_highlighted.xml  ic_camera_purple.xml  ic_camera_switch.xml  ic_menu.xml  ic_search.xml  ic_speaker_small.xml  (+10 more)
fortuna_android/app/src/test/resources/: robolectric.properties
fortuna_android/diagram/: class_diagram.html
fortuna_android/fine-tuning/: CHANGES_V2.md  CODE_REVIEW.md  FIXES_APPLIED.md  FIXES_APPLIED_V2.md  MAC_SETUP.md  QUICK_START.md  README.md  REMOTE_SETUP.md  TRAINING_FLOW.md  convert_to_gguf.sh  finetune_mac.py  finetune_smolvlm.py  finetune_smolvlm_v2.py  finetune_smolvlm_v2.py.bak  merge_lora.py  prepare_dataset.py  prepare_dataset_coco.py  prepare_dataset_coco_v3.py  quickstart.sh  requirements.txt  run_remote.sh  test_mac.sh  test_training.py  test_training.py.bak  train.sh  validate_model.py
fortuna_android/gradle/: libs.versions.toml
fortuna_android/gradle/wrapper/: gradle-wrapper.properties
fortuna_android/llama-module/: build.gradle.kts
fortuna_android/llama-module/src/main/cpp/: CMakeLists.txt  llama-android-vlm.cpp  llama-android.cpp
fortuna_android/scripts/: install-ndk.sh  setup-opencl.sh
fortuna_api/: .dockerignore  .env.example  CLAUDE.md  Dockerfile  FRONTEND_AUTH_GUIDE.md  PM_TESTING_GUIDE.md  Procfile  README.md  SIMPLIFIED_API_DOCS.md  generate_diagrams.sh  manage.py  pyproject.toml  test_client.html  test_nickname_manually.py  test_nickname_shell.py  verify_saju.py
fortuna_api/core/: middleware.py  models.py  serializers.py  tasks.py  urls.py  views.py
fortuna_api/core/management/commands/: generate_daily_fortunes.py  generate_fortune_images.py
fortuna_api/core/migrations/: 0001_initial.py  0002_chakraimage_date_and_more.py  0003_fortuneresult_status_fortuneresult_updated_at_and_more.py  0004_fortuneresult_fortune_score.py  0005_alter_chakraimage_image.py  0006_fortuneresult_fortune_image.py
fortuna_api/core/services/: __init__.py  daewoon.py  fortune.py  fortune_v2.py  image.py
fortuna_api/core/static/characters/: README.md
fortuna_api/core/tests/: test_api_endpoints.py  test_daewoon.py  test_fortune_balance.py  test_fortune_service.py  test_image_service.py  test_middleware.py  test_persistence.py  test_presigned_url.py  test_presigned_url_e2e.py  test_presigned_url_endpoints.py  test_saju_calculation.py
fortuna_api/core/utils/: async_helpers.py  concept.py  saju_concepts.py
fortuna_api/docs/: BATCH_GENERATION.md
fortuna_api/examples/: client_integration.md
fortuna_api/fortuna_api/: __init__.py  asgi.py  urls.py  wsgi.py
fortuna_api/fortuna_api/settings/: __init__.py  base.py  development.py  production.py  testing.py
fortuna_api/scripts/: setup_s3_cors.py
fortuna_api/user/: managers.py  models.py  permissions.py  serializers.py  test_integration.py  urls.py  utils.py  views.py
fortuna_api/user/migrations/: 0001_initial.py  0002_add_saju_fields.py  0003_alter_user_birth_time_units.py  0004_user_deleted_at.py  0005_remove_nickname_unique.py
fortuna_api/user/tests/: integration.py  test_nickname_duplication.py  test_profile_update.py  test_user_deletion.py
(+302 files in other folders)
