[project]
name = "fortuna"
version = "0.1.0"
description = "Fortuna API - Django REST API with JWT authentication and Google OAuth"
authors = [
    {name = "강지혁",email = "wlgur7238@snu.ac.kr"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    # Core Django
    "django>=5.2.6,<6.0.0",
    "djangorestframework>=3.16.1,<4.0.0",

    # Authentication & Authorization
    "django-allauth>=64.2.1,<65.0.0",
    "dj-rest-auth>=6.0.0,<7.0.0",
    "djangorestframework-simplejwt>=5.3.0,<6.0.0",

    # Database
    "psycopg2-binary>=2.9.9,<3.0.0",

    # Environment & Configuration
    "python-decouple>=3.8,<4.0",


    # CORS & Security
    "django-cors-headers>=4.3.1,<5.0.0",

    # Development & Utilities
    "django-extensions>=3.2.3,<4.0.0",
    "pillow>=10.1.0,<11.0.0",

    # API Documentation
    "drf-spectacular>=0.27.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.0.0,<9.0.0",
    "pytest-django>=4.8.0,<5.0.0",
    "pytest-cov>=4.1.0,<5.0.0",
    "factory-boy>=3.3.0,<4.0.0",

    # Code Quality
    "black>=24.0.0,<25.0.0",
    "isort>=5.13.0,<6.0.0",
    "flake8>=7.0.0,<8.0.0",
    "mypy>=1.8.0,<2.0.0",
    "django-stubs>=4.2.7,<5.0.0",
    "djangorestframework-stubs>=3.14.5,<4.0.0",

    # Development Tools
    "django-debug-toolbar>=4.2.0,<5.0.0",
    "ipython>=8.18.0,<9.0.0",
    "pre-commit>=3.6.0,<4.0.0",
]

production = [
    # Production Server
    "gunicorn>=21.2.0,<22.0.0",

    # Monitoring & Logging
    "sentry-sdk>=1.39.0,<2.0.0",

    # Caching
    "django-redis>=5.4.0,<6.0.0",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
